# power-point-builder

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py  utils.py
backend/app/models/: presentation.py  quality.py  schemas.py  template.py
backend/app/routers/: generate.py  presentations.py  templates.py
backend/app/services/: content_generator.py  document_extractor.py  pipeline.py  quality_analyzer.py  slide_assembler.py  template_parser.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: LayoutPreview.tsx  OutlineEditor.tsx  QualityReport.tsx  TemplatePicker.tsx  TemplateUploader.tsx  TopicInput.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
tasks/research/: 01-template-parsing-audit.md  02-content-generation-audit.md  03-slide-assembly-audit.md  04-gap-analysis.md  05-improvement-plan.md
